<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/gray" />

    <EditText
        android:textColor="@color/gray"
        android:id="@+id/editTextTextPersonName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="116dp"
        android:background="@drawable/edittext_backround"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/ET_full_name"
       app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <EditText
        android:textColor="@color/gray"
        android:id="@+id/editTextTextPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ET_Email"
        android:ems="10"
        android:minHeight="48dp"
        android:background="@drawable/edittext_backround"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:textColor="@color/gray"
        android:id="@+id/editTextTextPassword1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ET_Password"
        android:ems="10"
        android:minHeight="48dp"
        android:background="@drawable/edittext_backround"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:textColor="@android:color/white"
        android:background="#CD00F1"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/BTN_register"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword1"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword1" />

</androidx.constraintlayout.widget.ConstraintLayout>